--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>Monkeyshot|猴寶拍拍</title>
   </head>
-  <body>
+  <body style="background: rgb(225, 246, 243);">
     <h1 style="display: none">MonkeyShot</h1>
     <h1 style="display: none">猴寶拍拍</h1>
     <noscript>
