--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>monkey.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <title>Monkeyshot|猴寶拍拍</title>
+    <title>Huge Bamboo|巨竹</title>
   </head>
   <body>
-    <h1 style="display: none">MonkeyShot</h1>
-    <h1 style="display: none">猴寶拍拍</h1>
+    <h1 style="display: none">Huge Bamboo</h1>
+    <h1 style="display: none">巨竹</h1>
     <noscript>
       <strong>We're sorry but my-vue-cli3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
