--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    
+    <script src="./xlsx.full.min.js"></script>
   </body>
 </html>
